--- a/app/src/main/res/layout/activity_single_coin.xml
+++ b/app/src/main/res/layout/activity_single_coin.xml
@@ -1,63 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.joeca.kryptostats.SingleCoinActivity">
+                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                 xmlns:tools="http://schemas.android.com/tools"
+                                                 android:layout_width="match_parent"
+                                                 android:layout_height="match_parent"
+                                                 tools:context="com.example.joeca.kryptostats.Activities.SingleCoinActivity">
 
-    <LinearLayout
-        android:padding="6dp"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
 
         <LinearLayout
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:id="@+id/coinIcon"
-                android:src="@mipmap/ic_launcher_round"
+                android:id="@+id/individualCoin"
+                android:padding="6dp"
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="120dp" />
+                android:layout_height="wrap_content">
+
+            <LinearLayout
+                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                <ImageView
+                        android:id="@+id/coinIcon"
+                        android:src="@mipmap/ic_launcher_round"
+                        android:layout_width="match_parent"
+                        android:layout_height="120dp"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                <TextView
+                        android:id="@+id/coinSymbol"
+                        android:text="BTC"
+                        android:textStyle="bold"
+                        android:textSize="40dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                <TextView
+                        android:id="@+id/coinFullName"
+                        android:text="Bitcoin"
+                        android:textSize="40dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+            </LinearLayout>
 
         </LinearLayout>
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/coinSymbol"
-                android:text="BTC"
-                android:textStyle="bold"
-                android:textSize="40dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:id="@+id/coinFullName"
-                android:text="Bitcoin"
-                android:textSize="40dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
+        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
+                      android:layout_below="@id/individualCoin" android:padding="6dp">
+            <TextView android:layout_width="match_parent" android:layout_height="match_parent" android:text="Hello"/>
         </LinearLayout>
 
-    </LinearLayout>
+    </RelativeLayout>
 
     <!--<include layout="@layout/content_single_coin" />-->
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_menu_info_details" />
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="@dimen/fab_margin"
+            app:srcCompat="@android:drawable/ic_menu_info_details"/>
 
 </android.support.design.widget.CoordinatorLayout>
