--- a/app/src/main/res/layout/coin_layout.xml
+++ b/app/src/main/res/layout/coin_layout.xml
@@ -1,85 +1,158 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="90dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="8dp"
-        app:cardElevation="2dp"
-        app:cardCornerRadius="2dp"
-        >
-
-        <LinearLayout
-            android:padding="8dp"
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            
-            <ImageView
-                android:id="@+id/coinIcon"
-                app:srcCompat="@mipmap/ic_launcher_round"
-                android:layout_width="60dp"
-                android:layout_height="60dp" />
-
-            <RelativeLayout
-                android:layout_marginLeft="8dp"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-                
-                <LinearLayout
+
+    <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            app:cardElevation="2dp"
+            app:cardCornerRadius="2dp"
+    >
+
+        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
+            <LinearLayout
+                    android:id="@+id/coinSummary"
+                    android:padding="8dp"
                     android:orientation="horizontal"
-                    android:layout_alignParentLeft="true"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-                    <TextView
-                        android:id="@+id/coinSymbol"
-                        android:text="BTC"
-                        android:textStyle="bold"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                <ImageView
+                        android:id="@+id/coinIcon"
+                        app:srcCompat="@mipmap/ic_launcher_round"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"/>
 
-                    <TextView
-                        android:text="|"
-                        android:textStyle="bold"
-                        android:layout_marginStart="8dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                <RelativeLayout
+                        android:layout_marginLeft="8dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
 
-                    <TextView
-                        android:id="@+id/coinFullName"
-                        android:text="loading..."
-                        android:layout_marginStart="8dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                    <LinearLayout
+                            android:id="@+id/coinLayoutNameContainer"
+                            android:orientation="horizontal"
+                            android:layout_alignParentLeft="true"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
 
-                </LinearLayout>
+                        <TextView
+                                android:id="@+id/coinSymbol"
+                                android:text="BTC"
+                                android:textStyle="bold"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
 
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_alignParentRight="true"
+                        <TextView
+                                android:text="|"
+                                android:textStyle="bold"
+                                android:layout_marginStart="8dp"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
+
+                        <TextView
+                                android:id="@+id/coinFullName"
+                                android:text="loading..."
+                                android:layout_marginStart="8dp"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                            android:id="@+id/coinLayoutRankContainer"
+                            android:orientation="horizontal"
+                            android:layout_alignParentRight="true"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+
+                        <TextView
+                                android:text="Rank: "
+                                android:layout_marginEnd="4dp"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
+
+                        <TextView
+                                android:id="@+id/coinLayoutRank"
+                                android:text="1"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout android:layout_width="wrap_content"
+                                  android:layout_height="wrap_content"
+                                  android:layout_below="@+id/coinLayoutNameContainer"
+                                  android:layout_marginTop="12dp">
+                        <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Proof Type: "
+                        />
+
+                        <TextView
+                                android:id="@+id/coinLayoutPoW"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="loading"
+                        />
+                    </LinearLayout>
+
+                    <LinearLayout android:layout_width="wrap_content"
+                                  android:layout_height="wrap_content"
+                                  android:layout_below="@+id/coinLayoutRankContainer"
+                                  android:layout_alignParentRight="true"
+                                  android:layout_marginTop="12dp">
+                        <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Algorithm: "
+                        />
+
+                        <TextView
+                                android:id="@+id/coinLayoutAlgorithm"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="loading"
+                        />
+                    </LinearLayout>
+
+                </RelativeLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                    android:id="@+id/coinDetails"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-                    
-                    <TextView
-                        android:text="$"
-                        android:layout_marginEnd="4dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:padding="8dp"
+                    android:orientation="horizontal"
+                    android:layout_below="@+id/coinSummary"
+            >
+                <RelativeLayout android:layout_width="wrap_content"
+                                android:layout_height="wrap_content">
+                    <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/coinPriceUsd"
-                        android:text="10,000"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-                    
-                </LinearLayout>
+                        <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Current Price USD: "/>
 
-            </RelativeLayout>
-        </LinearLayout>
+                        <TextView
+                                android:id="@+id/coinPrice"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:text="Loading..."/>
+                    </LinearLayout>
+                </RelativeLayout>
+
+            </LinearLayout>
+
+        </RelativeLayout>
 
     </android.support.v7.widget.CardView>
 
