--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,20 +6,31 @@
     android:layout_height="match_parent"
     tools:context="com.example.joeca.kryptostats.Activities.MainActivity">
 
-    <!--<android.support.v7.widget.Toolbar-->
-        <!--android:id="@+id/toolbarMain"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="?attr/actionBarSize"-->
-        <!--android:background="@color/colorPrimary"-->
-    <!--/>-->
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbarMain"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary"
+    />
+
+    <com.miguelcatalan.materialsearchview.MaterialSearchView
+        android:id="@+id/search_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:searchCloseIcon="@drawable/ic_action_navigation_close_inverted"
+        app:searchBackIcon="@drawable/ic_action_navigation_arrow_back"
+        app:searchSuggestionIcon="@drawable/ic_suggestion"
+        />
 
     <!--<com.miguelcatalan.materialsearchview.MaterialSearchView android:layout_width="match_parent"-->
                                                              <!--android:layout_height="wrap_content"></com.miguelcatalan.materialsearchview.MaterialSearchView>-->
 
     <android.support.v7.widget.RecyclerView
+        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/recyclerView_main"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="60dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
